# src/models/Trips.js
@@ -1,31 +1,0 @@
-const mongoose = require("mongoose");
-const Schema = mongoose.Schema;
-
-const Trip = new Schema({
-    title: {
-        type: String,
-        required: true,
-    },
-    driver: {
-        type: Schema.Types.ObjectId,
-        ref: "usuario",
-        required: true,
-        immutable: true,
-    },
-    passengers: [
-        {
-            type: Schema.Types.ObjectId,
-            ref: "passenger",
-        },
-    ],
-    totalDistance: {
-        type: Number,
-        required: true,
-    },
-    data: {
-        type: Date,
-        required: true,
-    },
-});
-
-module.exports = mongoose.model("trip", Trip);
